# renovate-python-post-release-bug

./: pyproject.toml  renovate.json
